<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/nome"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/Edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/idade"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/Edit_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/temperatura_corporal"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/Edit_temperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dias_com_tosse"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/Edit_tosse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dias_com_dor_de_cabeca"
        android:textColor="@color/black"
        android:textSize="17sp"/>


    <EditText
        android:id="@+id/Edit_enxaqueca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/visitou_algum_desses_paises_nas_ultimas_semanas"
        android:textColor="#E400EC"
        android:textSize="14sp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/italia" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/china" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/indonesia" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/portugal" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/eua" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/paises_visitados"
        android:textColor="#E400EC"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/Edit_visitados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/botao"
        android:layout_marginTop="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_enviar"
        android:onClick="Enviar"/>

</LinearLayout>

</ScrollView>